<resources>
    <string name="app_name">学生管理</string>
    <string name="login">登陆</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="regedit">注册</string>
    <string name="regedit_and_login">注册并登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>

    <!-- login -->
    <string name="admin">管理人员</string>
    <string name="teacher_student">教师/学生</string>

    <!-- main -->
    <string name="report">上报</string>
    <string name="notice">公告</string>
    <string name="me">我的</string>


    <string name="base_info">个人信息</string>
    <string name="personal_info">基本信息</string>
    <string name="signature">个性签名</string>
    <string name="interest">兴趣爱好</string>

    <string name="sex_selected">性别选择</string>
    <string name="man">男</string>
    <string name="woman">女</string>

    <string name="department_select">系部选择</string>
    <string name="save">保存</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
