<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/common_title_bar" android:visibility="gone"/>
   <TextView
       android:textColor="@color/colorPrimary"
       android:text="@string/app_name"
       android:gravity="center"
       android:textSize="25sp"
       android:layout_marginTop="100dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
    <TextView
        android:textColor="#a000"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:textColor="#a000"
        android:textColorHint="#a000"
        android:id="@+id/etPhone"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="手机号码/用户名"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="#a000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:textColor="#a000"
        android:textColorHint="#a000"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="请输入密码"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textColor="#fff"
        android:background="@drawable/bg_login_button"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#a000"
            android:padding="5dp"
            android:id="@+id/tvForgetPassword"
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#a000"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:id="@+id/tvRegedit"
            android:gravity="right"
            android:text="@string/regedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>